# napari-convpaint

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  _config.yml  _toc.yml  mkdocs.yml  napari.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: book.yml  test_and_deploy.yml
book/: Animal_tracking.ipynb  Annotations.ipynb  Calcium_waves.ipynb  ConvpaintModel.ipynb  Convpaint_api_introduction.ipynb  Convpaint_api_tutorial.ipynb  Description.ipynb  FE_descriptions.ipynb  First_steps.ipynb  Installation.ipynb  Landing.md  Params_settings.ipynb  RGB.ipynb  Timelapse.ipynb  Workflow.ipynb  convpaint_api.ipynb
docs/: ConvpaintModel.md  Param.md  index.md
images/animal_tracking_workflow/: segmentation_shark.webm
notebooks/: convpaint_api.ipynb  convpaint_features_extraction_for_study.ipynb  convpaint_utils_api.ipynb  evaluate_feature importance.no_plots.ipynb  evaluate_feature importance.plots.ipynb  umaping_extraxted_features.no_plots.ipynb  umaping_extraxted_features.plots.ipynb
notebooks/results/: selected_features_agg_shaps_0_5634.pckl  selected_idx.pckl  selected_idx_evaluated.pckl
sample_data/: first_steps_annotations.tiff  lily_VGG16.pickle  lily_VGG16.pkl  lily_annotations.tif
sample_data/imc_tutorial/: annotations.npy
src/napari_convpaint/: VHGroup.py  __init__.py  conv_paint.py  conv_paint_cellpose.py  conv_paint_classifier.py  conv_paint_combo_fe.py  conv_paint_dino.py  conv_paint_dino_jafar.py  conv_paint_fe_template.py  conv_paint_feature_extractor.py  conv_paint_feature_extractor_2.py  conv_paint_gaussian.py  conv_paint_ilastik.py  conv_paint_model.py  conv_paint_nnlayers.py  conv_paint_param.py  conv_paint_utils.py  conv_paint_widget.py  conv_parameters.py  convpaint_model.py  convpaint_sample.py  convpaint_widget.py  feature_extractor.py  napari.yml  rs_testing.ipynb  sample_data.py  testing_data.py  utils.py
src/napari_convpaint/_tests/: conftest.py  test_cancellation.py  test_conv_paint.py  test_conv_paint_utils.py  test_convpaint.py  test_dims.py  test_dock_widget.py  test_multifile.py  test_tiling.py  test_utils.py
src/napari_convpaint/feature_extractors/: __init__.py  cellpose.py  combo_fe.py  dino.py  dino_jafar.py  dinov3.py  gaussian.py  ilastik.py  nnlayers.py  template.py
src/napari_convpaint/jafar/: LICENSE.txt
src/napari_convpaint/jafar/checkpoints/: info_checkpoints.md
src/napari_convpaint/jafar/layers/: __init__.py  attentions.py  convolutions.py  jafar.py  other.py  positional_encoding.py  vit_wrapper.py
