[metadata]
name = napari-convpaint

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-convpaint
license = BSD-3-Clause
description = A plugin for segmentation by pixel classification using convolutional feature extraction
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-convpaint/issues
    Documentation = https://github.com/guiwitz/napari-convpaint#README.md
    Source Code = https://github.com/guiwitz/napari-convpaint
    User Support = https://github.com/guiwitz/napari-convpaint/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    scikit-learn
    scikit-image
    torch
    torchvision
    pandas
    numpy
    joblib

[options.packages.find]
where = src

[options.package_data]
napari-convpaint = 
    napari.yml

[options.entry_points] 
napari.manifest = 
    napari-convpaint = napari_convpaint:napari.yml

