[metadata]
name = napari-convpaint

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-convpaint
license = BSD-3-Clause
description = A plugin for segmentation by pixel classification using convolutional feature extraction
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-convpaint/issues
    Documentation = https://github.com/guiwitz/napari-convpaint#README.md
    Source Code = https://github.com/guiwitz/napari-convpaint
    User Support = https://github.com/guiwitz/napari-convpaint/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    scikit-learn
    scikit-image
    torch
    torchvision
    pandas
    numpy
    joblib
    zarr
    einops
    napari-guitils
    napari-annotation-project


[options.packages.find]
where = src

[options.package_data]
napari-convpaint = 
    napari.yml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.entry_points] 
napari.manifest = 
    napari-convpaint = napari_convpaint:napari.yml
