[metadata]
name = napari-convpaint

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-convpaint
license = BSD-3-Clause
description = A plugin for segmentation by pixel classification using pre-trained neural networks for feature extraction
keywords = napari, plugin, segmentation, machine learning, deep learning, image analysis, neural networks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Software Development :: Testing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-convpaint/issues
    Documentation = https://github.com/guiwitz/napari-convpaint#README.md
    Source Code = https://github.com/guiwitz/napari-convpaint
    User Support = https://github.com/guiwitz/napari-convpaint/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    catboost
    einops
    joblib
    magicgui
    napari
    napari-annotation-project
    napari-guitils
    numpy
    pandas
    pyyaml
    qtpy
    scikit-learn
    scikit-image
    tifffile
    torch
    torchvision>=0.13.0
    zarr


[options.packages.find]
where = src

[options.package_data]
napari-convpaint = 
    napari.yml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pyqt5

cellpose =
    cellpose

ilastik =
    ilastik-napari
    # Install 'fastfilters' via Conda:
    # conda install -c ilastik-forge fastfilters

qt =
    pyqt5

[options.entry_points] 
napari.manifest = 
    napari-convpaint = napari_convpaint:napari.yml
